<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/remove"
        android:title="@string/remove"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_24dp"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/cancel"
        android:title="@string/cancel"
        android:icon="@drawable/ic_cancel_24dp"
        android:visible="false"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/accept"
        android:title="@string/accept"
        android:icon="@drawable/ic_accept_24dp"
        android:visible="false"
        app:showAsAction="always">
    </item>
</menu>