<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    tools:context="ru.zuma.ikraqualifying.AddParticipantActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitStart"
                android:src="@drawable/empty_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="9dp">

                <Button
                    android:id="@+id/btAddPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/add_photo" />

                <Button
                    android:id="@+id/btRemovePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_photo"
                    android:visibility="invisible" />
            </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participant"
                    android:textColor="@color/primaryText"
                    android:textSize="18dp" />



            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="#000000"
                android:hint="@string/name"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="#000000"
                android:hint="@string/second_name"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etThirdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="#000000"
                android:hint="@string/third_name"
                android:textSize="16dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    android:textColor="@color/primaryText"
                    android:textSize="18dp" />


            <EditText
                android:id="@+id/etGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:hint="@string/group_full"
                android:textSize="16dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textColor="@color/primaryText"
                    android:textSize="18dp" />

            <EditText
                android:id="@+id/etAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:hint="@string/about_full"
                android:textSize="16dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>

