<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.zuma.ikraqualifying.ParticipantInfoActivity"
    android:layout_margin="18dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/empty_photo"
                android:scaleType="fitStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participant"
                android:textSize="24dp"
                android:textColor="#000000"
                android:paddingTop="9dp"/>

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#000000"/>

            <View
                android:layout_width="wrap_content"
                android:background="@drawable/line"
                android:layout_height="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textSize="24dp"
                android:textColor="#000000"
                android:paddingTop="9dp"/>

            <TextView
                android:id="@+id/tvGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#000000"/>

            <View
                android:layout_width="wrap_content"
                android:background="@drawable/line"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textSize="24dp"
                android:textColor="#000000"
                android:paddingTop="9dp"/>

            <TextView
                android:id="@+id/tvAboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#000000"/>

            <View
                android:layout_width="wrap_content"
                android:background="@drawable/line"
                android:layout_height="1dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
